<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/abs_route"
        layout="@layout/abs_route" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55FFFFFF"
            android:orientation="vertical" >

            <com.oic.sdk.vender.ClearableAutoCompleteTextView
                android:id="@+id/autoCompleteTextViewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/diem_di" >
            </com.oic.sdk.vender.ClearableAutoCompleteTextView>

            <com.oic.sdk.vender.ClearableAutoCompleteTextView
                android:id="@+id/autoCompleteTextViewEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/diem_den" >
            </com.oic.sdk.vender.ClearableAutoCompleteTextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                style="?android:attr/buttonBarStyle">
                
                <Button
                    android:id="@+id/btnMyLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="btnClicked"
                    android:text="@string/vi_tri_cua_toi" />
                
                <Button
                    android:id="@+id/btnGetDirection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:onClick="btnClicked"
                    android:text="@string/tim_duong" />
            </LinearLayout>

            <ListView
                android:id="@+id/lv_saved_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="0dp" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/drawer_shadow_bot" />
    </RelativeLayout>

</LinearLayout>