<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.oic.sdk.view.OicMapView
            android:id="@+id/oic_mapview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:orientation="vertical">

		<ImageButton 
		    android:layout_width="50dp"
		    android:layout_height="50dp"
		    android:id="@+id/btn_compass"
		    android:onClick="btnClicked"
		    android:contentDescription="@string/app_name"
		    android:src="@drawable/compass"
		    android:background="#0000"/>
		
        <com.oic.sdk.vender.ClearableAutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:background="@drawable/editbox_background"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/cua_hang"
            android:minHeight="50dp"
            android:singleLine="true" >
        </com.oic.sdk.vender.ClearableAutoCompleteTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:background="@android:color/transparent"
            android:paddingLeft="0dp"
            android:paddingRight="5dp"
            android:paddingStart="0dp" >

            <ListView
                android:id="@+id/listFloors"
                android:layout_width="50dp"
                android:layout_height="200dp"
                android:layout_gravity="end"
                android:background="@drawable/editbox_background_normal"
                android:listSelector="@drawable/item_selector"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:stackFromBottom="true" >
            </ListView>

            <ImageButton
                android:id="@+id/btnDirection"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:background="@drawable/editbox_background_normal"
                android:contentDescription="@string/app_name"
                android:onClick="btnClicked"
                android:src="@drawable/direction" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#11000000" />

    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/view_detail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:onClick="btnClicked"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/drawer_shadow_top"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/item_selector_white"
            android:gravity="center_vertical">
            <ImageView 
                android:id="@+id/detail_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/logo_empty"
                android:scaleType="centerCrop"
                android:padding="2dp"
                android:onClick="btnClicked"
                android:background="#0000"
                android:contentDescription="@string/app_name"/>
            <TextView 
                android:id="@+id/detail_store_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_weight="1"
                android:text="@string/kfc"
                android:textSize="18sp"
                android:textColor="@color/base_color"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"/>
            <ImageButton 
                android:id="@+id/btn_save_store"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/editbox_background"
                android:src="@drawable/star_none"
                android:contentDescription="@string/app_name"
                android:onClick="btnClicked"/>
            <ImageButton 
                android:id="@+id/btn_route_detail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/editbox_background"
                android:src="@drawable/direction"
                android:contentDescription="@string/app_name"
                android:onClick="btnClicked"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000" 
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>